@@ -4389,7 +4389,8 @@ int pc_checkallowskill(struct map_session_data *sd)
 	const enum sc_type scs_list[] = {
 		SC_AUTOGUARD,
 		SC_DEFENDER,
-		SC_REFLECTSHIELD
+		SC_REFLECTSHIELD,
+		SC_REFLECTDAMAGE
 	};
 	int i;
 	nullpo_retr(0, sd);
@@ -7031,6 +7032,7 @@ bool pc_isriding( struct map_session_data *sd, int flag )
 		case JOB_KNIGHT: case JOB_KNIGHT2: case JOB_CRUSADER: case JOB_CRUSADER2:
 		case JOB_LORD_KNIGHT: case JOB_LORD_KNIGHT2: case JOB_PALADIN: case JOB_PALADIN2:
 		case JOB_ROYAL_GUARD: case JOB_ROYAL_GUARD2: case JOB_ROYAL_GUARD_T: case JOB_ROYAL_GUARD_T2:
+		case JOB_BABY_KNIGHT: case JOB_BABY_KNIGHT2: case JOB_BABY_CRUSADER: case JOB_BABY_CRUSADER2:
 		case JOB_BABY_GUARD: case JOB_BABY_GUARD2:
 			if( sd->sc.option&OPTION_RIDING && (flag&OPTION_RIDING) )
 				isriding = true;
